--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --color-primarywhite: #ededed;
   --color-secondarywhite: #eee;
   --color-blue: #2196f3;
+  --color-focus: #188ce8;
   --color-darkblue: #2f303a;
   --color-black: #212121;
   --color-gray: #757575;
@@ -57,6 +58,7 @@ a {
 }
 
 .auth-nav {
+  color: var(--color-gray);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -118,6 +120,12 @@ a[href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"]
   letter-spacing: 0.06em;
 }
 
+.button:hover,
+.button:focus {
+  color: var(--color-white);
+  background-color: var(--color-focus);
+}
+
 .h-three-in-pageone {
   font-weight: 700;
   font-size: 14px;
@@ -137,6 +145,20 @@ a[href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"]
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+
+.paragraph {
+  color: var(--color-gray);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.specialty {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
 }
 
@@ -175,13 +197,6 @@ a[href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"]
 .container-in-pagetwo {
   background: var(--color-white);
   border: 1px solid #eeeeee;
-}
-
-.paragraph {
-  color: var(--color-gray);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
 }
 
 .paragraph-in-pagetwo {
